[workspace]

members = [
    "dispatch_examples/greeter",
    "frc42_dispatch",
    "frc42_dispatch/hasher",
    "frc42_dispatch/macros",
    "frc42_dispatch/macros/example",
    "frc46_token",
    "frc53_nft",
    "fvm_actor_utils",
    "fvm_dispatch_tools",
    "testing/integration",
    "testing/test_actors",
    "testing/test_actors/actors/*",
    "testing/test_actors/actors/frc46_factory_token/token_impl",
]

[workspace.dependencies]
cid = { version = "0.10.1", default-features = false, features = ["serde-codec"] }
fvm_sdk = "~3.3.0"
fvm_shared = "~3.4.0"
fvm_integration_tests = "~3.1.0"
fvm_ipld_encoding = "0.4.0"
fvm_ipld_blockstore = "0.2.0"
fvm_ipld_hamt = "0.7.0"
fvm_ipld_amt = { version = "0.6.0", features = ["go-interop"] }
fvm_ipld_bitfield = "0.5.4"

[patch.crates-io]
fvm_actor_utils = { git = "https://github.com/helix-onchain/filecoin", branch = "alex/update-fvm-ipld" }
frc42_dispatch = { git = "https://github.com/helix-onchain/filecoin", branch = "alex/update-fvm-ipld" }
frc46_token = { git = "https://github.com/helix-onchain/filecoin", branch = "alex/update-fvm-ipld" }
cid = { version = "0.10.1", git = "https://github.com/multiformats/rust-cid", rev = "v0.10.1" }
fvm_ipld_bitfield = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }
fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }
fvm_ipld_hamt = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }
fvm_ipld_amt = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }
fvm = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }
fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }
fvm_integration_tests = { git = "https://github.com/filecoin-project/ref-fvm", branch = "synthetic-porep" }

[profile.wasm]
inherits = "release"
panic = "abort"
overflow-checks = false
lto = true
opt-level = "z"
strip = true
codegen-units = 1
incremental = false
