[workspace]

members = [
    "dispatch_examples/greeter",
    "frc42_dispatch",
    "frc42_dispatch/hasher",
    "frc42_dispatch/macros",
    "frc42_dispatch/macros/example",
    "frc46_token",
    "frc53_nft",
    "fvm_actor_utils",
    "fvm_dispatch_tools",
    "testing/integration",
    "testing/test_actors",
    "testing/test_actors/actors/*",
    "testing/test_actors/actors/frc46_factory_token/token_impl",
]

[workspace.dependencies]
cid = { version = "0.10.1", default-features = false, features = ["serde-codec"] }
fvm_integration_tests = "~3.1.0"
fvm_ipld_amt = { version = "0.6.0", features = ["go-interop"] }
fvm_ipld_bitfield = "0.5.4"
fvm_ipld_blockstore = "0.2.0"
fvm_ipld_encoding = "0.4.0"
fvm_ipld_hamt = "0.7.0"
fvm_sdk = "~3.3.0"
fvm_shared = "~3.4.0"

[profile.wasm]
inherits = "release"
panic = "abort"
overflow-checks = false
lto = true
opt-level = "z"
strip = true
codegen-units = 1
incremental = false
