[workspace]
resolver = "2"
members = [
    "dispatch_examples/greeter",
    "frc42_dispatch",
    "frc42_dispatch/hasher",
    "frc42_dispatch/macros",
    "frc42_dispatch/macros/example",
    "frc46_token",
    "frc53_nft",
    "fvm_actor_utils",
    "fvm_dispatch_tools",
    "testing/integration",
    "testing/test_actors",
    "testing/test_actors/actors/*",
    "testing/test_actors/actors/frc46_factory_token/token_impl",
]

[workspace.dependencies]
blake2b_simd = { version = "1.0.0" }
clap = { version = "4.3.21", features = ["derive"] }
cid = { version = "0.10.1", default-features = false, features = ["serde-codec"] }
fvm = { version = "~4.0", default-features = false }
fvm_integration_tests = "~4.0"
fvm_ipld_amt = "0.6.0"
fvm_ipld_bitfield = "0.6.0"
fvm_ipld_blockstore = "0.2.0"
fvm_ipld_encoding = "0.4.0"
fvm_ipld_hamt = "0.8.0"
fvm_sdk = "~4.0"
fvm_shared = "~4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }
integer-encoding = { version = "4.0.0" }
num-traits = { version = "0.2.15" }
anyhow = { version = "1.0.56" }

# internal deps of published packages
frc42_dispatch = { version = "5.0.0-alpha.1", path = "./frc42_dispatch", default-features=false }
fvm_actor_utils = { version = "9.0.0-alpha.1", path = "./fvm_actor_utils" }

# only consumed by non-published packages
frc53_nft = { path = "./frc53_nft" }
frc46_token = { path = "./frc46_token" }

[profile.wasm]
inherits = "release"
panic = "abort"
overflow-checks = false
lto = true
opt-level = "z"
strip = true
codegen-units = 1
incremental = false
