[package]
name = "fil_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
fvm_dispatch = { version = "0.1.0", path = "../fvm_dispatch" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_hamt = "0.5.1"
fvm_ipld_amt = { version = "0.4.2", features = ["go-interop"] }
fvm_ipld_encoding = "0.2.2"
fvm_sdk = { version = "1.0.0" }
fvm_shared = { version = "0.8.0" }
serde = { version = "1.0.136", features = ["derive"] }