[package]
name = "frc42_dispatch"
description = "Filecoin FRC-0042 calling convention/dispatch support library"
version = "3.0.1-alpha.1"
license = "MIT OR Apache-2.0"
keywords = ["filecoin", "dispatch", "frc-0042"]
repository = "https://github.com/helix-onchain/filecoin/"
edition = "2021"


[dependencies]
fvm_ipld_encoding = { version = "=0.3.3" }
fvm_sdk = { version = "=3.0.0-alpha.22", optional = true }
fvm_shared = { version = "=3.0.0-alpha.17" }
frc42_hasher = { version = "1.2.0", path = "hasher" }
frc42_macros = { version = "1.0.0", path = "macros" }
thiserror = { version = "1.0.31" }

[features]
default = ["dep:fvm_sdk"]
no_sdk = [] # avoid dependence on fvm_sdk (for proc macro and similar purposes)
