[package]
name = "frc42_dispatch"
description = "Filecoin FRC-0042 calling convention/dispatch support library"
version = "5.0.0-alpha.1"
license = "MIT OR Apache-2.0"
keywords = ["filecoin", "dispatch", "frc-0042"]
repository = "https://github.com/helix-onchain/filecoin/"
edition = "2021"


[dependencies]
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true, optional = true }
fvm_shared = { workspace = true }
frc42_hasher = { version = "3.0.0-alpha.1", path = "hasher" }
frc42_macros = { version = "3.0.0-alpha.1", path = "macros" }
thiserror = { version = "1.0.31" }

[features]
# disable default features to avoid dependence on fvm_sdk (for proc macro and similar purposes)
default = ["use_sdk"]
use_sdk = ["dep:fvm_sdk"]
