[package]
name = "frc46_factory_token"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.5", default-features = false }
frc42_dispatch = { path = "../frc42_dispatch" }
frc46_token = { path = "../frc46_token" }
fvm_actor_utils = { path = "../fvm_actor_utils" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "=0.3.3"
fvm_sdk = "=3.0.0-alpha.22"
fvm_shared = { version = "=3.0.0-alpha.17" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }
token_impl = { path = "token_impl" }

[dev-dependencies]
cid = { version = "0.8.5", default-features = false }
fvm = { version = "2.2.0", default-features = false }
fvm_integration_tests = "=3.0.0-alpha.1"
frc46_test_actor = { path = "../testing/fil_token_integration/actors/frc46_test_actor" }
actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", rev = "09aa10f082565565b08572532b245236525f778c" }

[build-dependencies]
wasm-builder = "3.0"