[package]
name = "frc46_token"
description = "Filecoin FRC-0046 fungible token reference implementation"
version = "7.0.0"
license = "MIT OR Apache-2.0"
keywords = ["filecoin", "fvm", "token", "frc-0046"]
repository = "https://github.com/helix-onchain/filecoin/"
edition = "2021"

[dependencies]
frc42_dispatch = { version = "3.3.0", path = "../frc42_dispatch" }
fvm_actor_utils = { version = "7.0.0", path = "../fvm_actor_utils" }

anyhow = "1.0.56"
cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }
num-traits = { version = "0.2.15" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }
integer-encoding = { version = "3.0.4" }
