[package]
name = "frc46_token"
description = "Filecoin FRC-0046 fungible token reference implementation"
version = "11.0.0"
license = "MIT OR Apache-2.0"
keywords = ["filecoin", "fvm", "token", "frc-0046"]
repository = "https://github.com/helix-onchain/filecoin/"
edition = "2021"

[dependencies]
frc42_dispatch = { workspace = true }
fvm_actor_utils = { workspace = true }

cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }
multihash-codetable = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }
thiserror = { workspace = true }
integer-encoding = { workspace = true }
