
[package]
name = "frc53_nft"
version = "1.0.0"
edition = "2021"

[dependencies]
frc42_dispatch = { workspace = true }
fvm_actor_utils = { workspace = true }

cid = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }
integer-encoding = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }
thiserror = { workspace = true }
