
[package]
name = "frcxx_nft"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
frc42_dispatch = { path = "../frc42_dispatch" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_hamt = "0.5.1"
fvm_ipld_amt = { version = "0.4.2", features = ["go-interop"] }
fvm_ipld_encoding = "0.2.2"
fvm_sdk = { version = "1.0.0" }
fvm_shared = { version = "0.8.0" }
num-traits = { version = "0.2.15" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }