[package]
name = "fvm_actor_utils"
description = "Utils for authoring native actors for the Filecoin Virtual Machine"
version = "4.0.1-alpha.1"
license = "MIT OR Apache-2.0"
keywords = ["filecoin", "fvm"]
repository = "https://github.com/helix-onchain/filecoin/"
edition = "2021"

[dependencies]
frc42_dispatch = { version = "3.0.1-alpha.2", path = "../frc42_dispatch" }

anyhow = "1.0.56"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "=0.3.3"
fvm_shared = "=3.0.0-alpha.20"
fvm_sdk = "=3.0.0-alpha.24"
num-traits = { version = "0.2.15" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }
