[package]
name = "fvm_actor_utils"
description = "Utils for authoring native actors for the Filecoin Virtual Machine"
version = "7.0.0"
license = "MIT OR Apache-2.0"
keywords = ["filecoin", "fvm"]
repository = "https://github.com/helix-onchain/filecoin/"
edition = "2021"

[dependencies]
frc42_dispatch = { version = "3.3.0", path = "../frc42_dispatch", default-features=false }

anyhow = "1.0.56"
cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
fvm_sdk = { workspace = true }
num-traits = { version = "0.2.15" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }
