[package]
name = "fvm_actor_utils"
description = "Utils for authoring native actors for the Filecoin Virtual Machine"
version = "11.0.0"
license = "MIT OR Apache-2.0"
keywords = ["filecoin", "fvm"]
repository = "https://github.com/helix-onchain/filecoin/"
edition = "2021"

[dependencies]
frc42_dispatch = { workspace = true }

anyhow = { workspace = true }
cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
fvm_sdk = { workspace = true }
multihash-codetable = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }
thiserror = { workspace = true }
