[package]
name = "fvm_dispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_ipld_encoding = { version = "0.2.2" }
fvm_sdk = { version = "1.0.0" }
fvm_shared = { version = "0.8.0" }
thiserror = { version = "1.0.31" }