[package]
name = "greeter"
version = "0.1.0"
edition = "2021"

[dependencies]
frc42_dispatch = { path = "../../frc42_dispatch" }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }

[dev-dependencies]
cid = { workspace = true }
fvm = { version = "^3.0.0", default-features = false }
fvm_integration_tests = { workspace = true }
actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", rev = "09aa10f082565565b08572532b245236525f778c" }

[build-dependencies]
substrate-wasm-builder = "4.0"
