[package]
name = "greeter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
frc42_dispatch = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }


[lib]
crate-type = ["cdylib"] ## cdylib is necessary for Wasm build
