[package]
name = "frc42_hasher"
version = "1.0.0"
license = "MIT OR Apache-2.0"
description = "Filecoin FRC-0042 calling convention method hashing"
repository = "https://github.com/helix-onchain/filecoin/"
edition = "2021"

[dependencies]
fvm_sdk = { version = "3.0.0-alpha.16", optional = true }
fvm_shared = { version = "3.0.0-alpha.14" }
thiserror = { version = "1.0.31" }

[features]
default = ["dep:fvm_sdk"]
no_sdk = [] # avoid dependence on fvm_sdk (for proc macro and similar purposes)
