[package]
name = "fil_token_integration_tests"
version = "0.1.0"
repository = "https://github.com/helix-collective/filecoin"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.63", features = ["backtrace"] }
cid = { version = "0.8.5", default-features = false }
fvm = { version = "2.0.0-alpha.2", default-features = false }
frcxx_nft = { path = "../../frcxx_nft" }
frc42_dispatch = { path = "../../frc42_dispatch" }
frc46_token = { version = "1.1.0", path = "../../frc46_token" }
fvm_integration_tests = "2.0.0-alpha.1"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"
fvm_shared = { version = "2.0.0-alpha.2" }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = { version = "0.5.0" }

[dev-dependencies]
actors-v9 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", rev = "b40284a166adb22612b4fd98ab6c2483f581d8f7" }
basic_nft_actor = {path = "actors/basic_nft_actor"}
basic_receiving_actor = { path = "actors/basic_receiving_actor" }
basic_token_actor = { path = "actors/basic_token_actor" }
basic_transfer_actor = { path = "actors/basic_transfer_actor" }
test_actor = { path = "actors/test_actor" }
