[package]
name = "fil_token_integration_tests"
version = "0.1.0"
repository = "https://github.com/helix-collective/filecoin"
edition = "2021"

[dependencies]
frc53_nft = { path = "../../frc53_nft" }
frc42_dispatch = { path = "../../frc42_dispatch" }
frc46_token = { path = "../../frc46_token" }
token_impl = { path = "../../frc46_factory_token/token_impl" }

anyhow = { version = "1.0.63", features = ["backtrace"] }
cid = { version = "0.8.5", default-features = false }
fvm = { version = "3.0.0-alpha.23", default-features = false }
fvm_integration_tests = "=3.0.0-alpha.2"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "=0.3.3"
fvm_shared = { version = "=3.0.0-alpha.20" }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = { version = "0.5.0" }

[dev-dependencies]
actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", rev = "09aa10f082565565b08572532b245236525f778c" }
basic_nft_actor = {path = "actors/basic_nft_actor"}
basic_receiving_actor = { path = "actors/basic_receiving_actor" }
basic_token_actor = { path = "actors/basic_token_actor" }
basic_transfer_actor = { path = "actors/basic_transfer_actor" }
frc46_test_actor = { path = "actors/frc46_test_actor" }
frc46_factory_token = { path = "../../frc46_factory_token" }
frc53_test_actor = { path = "actors/frc53_test_actor" }
