[package]
name = "helix_integration_tests"
version = "0.1.0"
repository = "https://github.com/helix-collective/filecoin"
edition = "2021"
publish = false

[dependencies]
frc42_dispatch = { workspace = true }
frc46_token = { workspace = true  }
frc53_nft = { workspace = true }
fvm_actor_utils = { workspace = true }

anyhow = { workspace = true, features = ["backtrace"] }
cid = { workspace = true }
fvm = { workspace = true }
fvm_integration_tests = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }

[dev-dependencies]
helix_test_actors = { path = "../test_actors" }
reqwest = "0.12.15"
token_impl = { path = "../test_actors/actors/frc46_factory_token/token_impl" }
