[package]
name = "basic_receiving_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
frc42_dispatch = { path = "../../../../frc42_dispatch" }
frc46_token = { path = "../../../../frc46_token" }
frc53_nft = { path = "../../../../frc53_nft" }
fvm_actor_utils = { path = "../../../../fvm_actor_utils" }

fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }

[build-dependencies]
substrate-wasm-builder = "4.0"
