[package]
name = "basic_token_actor"
version = "0.1.0"
repository = "https://github.com/helix-collective/filecoin"
edition = "2021"

[dependencies]
frc46_token = { path = "../../../../frc46_token" }
fvm_actor_utils = { path = "../../../../fvm_actor_utils" }

cid = { version = "0.8.5", default-features = false }
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_ipld_encoding = "=0.3.2"
fvm_sdk = { version = "=3.0.0-alpha.22" }
fvm_shared = { version = "3.0.0-alpha.16" }
num-traits = { version = "0.2.15" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }

[build-dependencies]
substrate-wasm-builder = "4.0.0"
