[package]
name = "basic_transfer_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.5", default-features = false }
fil_fungible_token = { version = "0.1.0", path = "../../../../fil_fungible_token" }
frc42_dispatch = { path = "../../../../frc42_dispatch" }
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_ipld_encoding = { version = "0.2.2" }
fvm_sdk = { version = "2.0.0-alpha.2" }
fvm_shared = { version = "2.0.0-alpha.2" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }

[build-dependencies]
wasm-builder = "3.0"